# GLC

./: CMakeLists.txt  README.md
CUDA-GL/include/: experiment.cuh  experimental.cuh  matrix.cuh  utility.cuh  vector.cuh
CUDA-GL/src/experiment/: experiment.cu  experimental.cu
CUDA-GL/src/matrix/: mat2.cu  mat3.cu  mat4.cu  operation.cu
CUDA-GL/src/utility/: graphic.cu  math.cu  other.cu  utility.cu
CUDA-GL/src/vector/: operation.cu  vec2.cu  vec3.cu  vec4.cu
GLC/include/: matrix.cuh  utility.cuh  vector.cuh
GLC/src/matrix/: mat2.cu  mat3.cu  mat4.cu  operation.cu
GLC/src/utility/: graphic.cu  math.cu  other.cu
GLC/src/vector/: operation.cu  vec2.cu  vec3.cu  vec4.cu
GLM-CUDA/: skibidi.txt
GLM-CUDA/include/: matrix.cuh  utility.cuh  vector.cuh
GLM-CUDA/src/matrix/: mat2.cu  mat3.cu  mat4.cu  operation.cu
GLM-CUDA/src/utility/: utility.cu
GLM-CUDA/src/vector/: indexProxy.cu  operation.cu  vec2.cu  vec3.cu  vec4.cu
include/GLC/: GLC.cuh  matrix.cuh  utility.cuh  vector.cuh
src/matrix/: mat2.cu  mat3.cu  mat4.cu  operation.cu
src/utility/: graphic.cu  math.cu  other.cu
src/vector/: operation.cu  vec2.cu  vec3.cu  vec4.cu
tests/: CMakeLists.txt  test.cpp  testCPU.cpp  testGPU.cu
tests/function/: CMakeLists.txt  testCPU.cpp  testGPU.cu
tests/opengl/: CMakeLists.txt  glad.c  main.cpp
tests/opengl/dependencies/include/glad/: glad.h
tests/opengl/dependencies/include/graphic/: EBO.h  VAO.h  VBO.h  shader.h
tests/opengl/dependencies/lib/graphic/: EBO.cpp  VAO.cpp  VBO.cpp  shader.cpp
tests/opengl/shader/: default.frag  default.vert
